[gd_scene load_steps=3 format=3 uid="uid://6ala2r7qqeyb"]

[ext_resource type="Texture2D" uid="uid://bwd2uf7jgu58f" path="res://Shared/export/s4m_ur4i_factory-o-pixelart_tileset.png" id="1_0gja0"]
[ext_resource type="Script" path="res://Entities/Blueprints/WireBlueprint.gd" id="1_jj572"]

[node name="WireBlueprint" type="Node2D"]
use_parent_material = true
script = ExtResource("1_jj572")
rotateable = true

[node name="SpriteUp" type="Sprite2D" parent="."]
visible = false
use_parent_material = true
texture = ExtResource("1_0gja0")
region_enabled = true
region_rect = Rect2(16, 208, 16, 16)

[node name="SpriteRight" type="Sprite2D" parent="."]
use_parent_material = true
rotation = 1.5708
texture = ExtResource("1_0gja0")
region_enabled = true
region_rect = Rect2(16, 208, 16, 16)

[node name="SpriteDown" type="Sprite2D" parent="."]
visible = false
use_parent_material = true
rotation = 3.14159
texture = ExtResource("1_0gja0")
region_enabled = true
region_rect = Rect2(16, 208, 16, 16)

[node name="SpriteLeft" type="Sprite2D" parent="."]
use_parent_material = true
rotation = 4.71239
texture = ExtResource("1_0gja0")
region_enabled = true
region_rect = Rect2(16, 208, 16, 16)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
use_parent_material = true
rotation = -3.14159
texture = ExtResource("1_0gja0")
region_enabled = true
region_rect = Rect2(16, 208, 16, 16)
