class_name WireBlueprint
extends BlueprintEntity

@onready var sprites: Array[Sprite2D] = [$SpriteRight, $SpriteDown, $SpriteLeft, $SpriteUp]


static func set_sprite_from_direction(direction_sprites: Array[Sprite2D], direction: int):
	if direction == 0 or direction == Types.Direction.LEFT or direction == Types.Direction.RIGHT:
		direction_sprites[0].visible = true
		direction_sprites[1].visible = false
		direction_sprites[2].visible = true
		direction_sprites[3].visible = false
		return

	if direction == Types.Direction.UP or direction == Types.Direction.DOWN:
		direction_sprites[0].visible = false
		direction_sprites[1].visible = true
		direction_sprites[2].visible = false
		direction_sprites[3].visible = true
		return

	direction_sprites[0].visible = direction & Types.Direction.RIGHT
	direction_sprites[1].visible = direction & Types.Direction.DOWN
	direction_sprites[2].visible = direction & Types.Direction.LEFT
	direction_sprites[3].visible = direction & Types.Direction.UP
